2002-11-14  Christopher Faylor  <cgf@redhat.com>

	* fhandler_serial.cc (fhandler_serial::tcgetattr): Don't take any
	special action when vmin_ == 0.

2002-11-14  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (getgroups32): Revert previous patch.  Use impersonation
	token if process is in impersonated state.
	* sec_helper.cc (is_grp_member): Rewrite.  Call getgroups32 only
	for current user.  Scan passwd and group info otherwise.

2002-11-14  Christopher Faylor  <cgf@redhat.com>

	* fhandler_console.cc (fhandler_console::write): Allow characters >=
	0177 to be displayed in the title bar.

2002-11-14  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (getgroups32): Don't use access token of current user when
	retrieving group info for another user.

2002-11-13  Christopher Faylor  <cgf@redhat.com>

	* dll_init.cc (dll_list::detach): Eliminate reliance on passed in dll
	address.  Infer from module of caller instead.
	(cygwin_detach_dll): Ignore dll_index argument.
	* dll_init.h (dll_list::detach): Reflect argument change above.

2002-11-13  Christopher Faylor  <cgf@redhat.com>

	* ioctl.cc (ioctl): Always print ioctl results, even when it's a tty.

2002-11-13  Christopher Faylor  <cgf@redhat.com>

	* winsup.h (low_priority_sleep): Declare.

2002-11-13  Christopher Faylor  <cgf@redhat.com>

	* miscfuncs.cc (low_priority_sleep): New function.  Use throughout
	where code is supposed to be giving up time slice.

	* fhandler_console.cc (fhandler_console::read): Switch button 2/3
	output escape sequences to be consistent with xterm.

2002-11-12  Pierre Humblet <pierre.humblet@ieee.org>

	* syscalls.cc (chmod): Simplify conditional.
	* sec_helper (cygsid::getfromstr): Reorganize to remove
	calls to strcpy and strtok_r.
	(cygsid::getfromgr): Change type to __uid32_t instead of int.
	Keep only the allow_ntsec branch. Never call LookupAccountSid 
	which calls PDCs, simply return -1 in case of failure.
	Use cygsid == instead of calling EqualSid and remove test 